--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,13 +23,16 @@
 
 {
   "compilerOptions": {
+    "lib": ["esnext", "dom"],
     "sourceMap": true,
     "outDir": "./dist/",
     "noImplicitAny": true,
-    "module": "es6",
-    "target": "es5",
-    "jsx": "react",
-    "allowJs": true,
+    "module": "ES6",
+    "target": "ES6",
+    "jsx": "preserve",
+    "allowJs": false,
     "moduleResolution": "node"
-  }
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
