--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-  "presets": ["@babel/preset-env", "@babel/react"]
+  "presets": ["@babel/preset-env", "@babel/react", "@babel/preset-typescript"],
+  "plugins": [
+    [
+      "styled-components",
+      { "ssr": true, "displayName": true, "preprocess": false }
+    ]
+  ]
 }
