--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,3 @@
 {
-  "presets": ["@babel/preset-env", "@babel/react", "@babel/preset-typescript"],
-  "plugins": [
-    [
-      "styled-components",
-      { "ssr": true, "displayName": true, "preprocess": false }
-    ]
-  ]
+  "presets": ["@babel/preset-env", "@babel/react"]
 }
