--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,17 +23,13 @@
 
 {
   "compilerOptions": {
-    "lib": ["esnext", "dom"],
     "sourceMap": true,
     "outDir": "./dist/",
     "noImplicitAny": true,
-    "module": "ES6",
-    "target": "ES6",
-    "jsx": "preserve",
-    "allowJs": false,
-    "moduleResolution": "node",
-    "skipLibCheck": true
-  },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+    "module": "es6",
+    "target": "es5",
+    "jsx": "react",
+    "allowJs": true,
+    "moduleResolution": "node"
+  }
 }
